name:                dynamic-hacking
version:             0.1.0.0
license:             LGPL-3
license-file:        LICENSE
author:              Zsigmond Adam Oliver
maintainer:          zsedem@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10


executable dynamic-hacking
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -dynamic
  -- LANGUAGE extensions used by modules in this package.
  default-extensions: ScopedTypeVariables

  build-depends:       base >=4.7 && <4.8,
                       plugins

  -- Directories containing source files.
  -- hs-source-dirs:

  default-language:    Haskell2010

